# 2024-fast-api-docker-tdd-postgresql

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml
app/: main.py
app/db/: base.py  models.py
app/migrations/: env.py
app/migrations/versions/: 23ce3009b6fc_add_categories_table.py  e12d3cad6133_add_categories_table.py
app/routes/: category_routes.py
app/schemas/: category.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py
app/test/schemas/: test_category_schema.py
app/test/use_cases/: test_category_use_cases.py
app/use_cases/: category.py
docs/: Dockerização da aplicação.md  db.md  migrations.md
site/: 404.html  objects.inv
site/Dockerização da aplicação/: index.html
site/db/: index.html
site/main/: index.html
site/migrations/: index.html
