[tool.poetry]
name = "2024-fast-api-docker-tdd-postgresql"
version = "0.1.0"
description = ""
authors = ["elza <elzaesimoes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
pytest = "^8.1.1"
alembic = "^1.13.1"
python-decouple = "^3.8"
uvicorn = "^0.28.0"
taskipy = "^1.12.2"
isort = "^5.13.2"
black = "^24.3.0"
mkdocstrings-python = "^1.9.0"
mkdocs-material = "^9.5.14"
mkdocs-macros-plugin = "^1.0.5"
mkdocstrings = "^0.24.1"
mkdocs = "^1.5.3"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn app.main:app --reload --port 5000"
lint = "black . && isort  ."
test = "docker-compose run app sh -c pytest -k ."
build = "docker-compose build"
up = "docker-compose up -d"

